first commit, Spanish translation

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,12 @@ en/media-graphics.pdf
 en/structure-crossref.pdf
 en/structure-sections.pdf
 en/structure-title.pdf
+es/part1.pdf
+es/part2.pdf
+es/part3.pdf
+es/bib-example.pdf
+es/media-graphics.pdf
+es/structure-crossref.pdf
+es/structure-sections.pdf
+es/structure-title.pdf
+
